frontend/src/css/app.css
* {
    box-sizing: border-box;
    margin: 0px;
    padding: 0px;
    font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica Neue, Ubuntu, sans-serif;
}

:root {
    --primary-color: rgb(84, 105, 212);
    --dark-bg-1000: #262626;
    --dark-bg-800: #202020;
    --dark-bg-600: #313131;
}

body {
    overflow-x: hidden;
}

:where(.right, .flex, .bignote textarea, .note-page textarea)::-webkit-scrollbar {
    width: 8px;
}

:where(.right, .flex, .bignote textarea,.note-page textarea)::-webkit-scrollbar-track {
    width: 30px;
    border-radius: 10px;
}

:where(.right, .flex, .bignote textarea,.note-page textarea)::-webkit-scrollbar-thumb {
    border-radius: 10px;
}

:where(.bignote, .note-page) textarea::-webkit-scrollbar-thumb {
    background: rgba(128, 128, 128, 0.669);
}

:where(.flex, .right):hover::-webkit-scrollbar-thumb {
    background: rgba(128, 128, 128, 0.669);
}


.main {
    display: flex;
    width: 100%;
    max-height: 100vh;
}

.right {
    /* margin-left: 220px; */
    height: 100vh;
    width: 100%;
    background: whitesmoke;
    transition: all 0.5s;
    overflow: auto;
}

.dark .right {
    background: var(--dark-bg-1000);
}

/* ///////////////////////////////////////////////////////// */
/*login & signup form styling  */

.formcontainer {
    width: 100%;
    height: 100vh;
    display: flex;
    justify-content: center;
    align-items: center;
    min-height: 400px;
}

.dark .formcontainer{
    background: var(--dark-bg-600);
    color: white;
}

.loginform {
    border-radius: 20px;
    display: flex;
    flex-direction: column;
    gap: 10px;
    width: 450px;
    padding: 40px;
}

form input {
    padding: 10px;
    border: 1px solid rgba(159, 149, 149, 0.746);
    font-size: 1rem;
    border-radius: 4px;
    color: rgba(0, 0, 0, 0.661);
    transition: all 0.2s;
}

.dark form input{
    color: white;
}

.form_item {
    display: flex;
    flex-direction: column;
}

.loginform form {
    display: flex;
    flex-direction: column;
    gap: 10px;
}

form input[type='submit'] {
    background-color: var(--primary-color);
    border: none;
    color: white;
    cursor: pointer;
    letter-spacing: 5px;
}

input[type='submit']:hover {
    box-shadow: 0px 0px 40px black inset;
}

form input:focus {
    outline-color: var(--primary-color);
}

.form_item label {
    padding-bottom: 5px;
}

.loginform h2 {
    color: var(--primary-color);
    font-weight: 900;
}

.loginform a {
    text-decoration: none;
    color: var(--primary-color);
}

.loginform .link {
    align-self: flex-end;
}

.err {
    border-color: red;
    border-width: 1px;
    background: transparent;
}

.err_msg {
    color: red;
    font-size: 0.8rem;
    margin-bottom: -3px;
}

.server_err {
    color: red;
    text-align: center;
    border-radius: 5px;
    border: 1px solid red;
    padding: 10px;
    background-color: rgba(255, 0, 0, 0.08);
}

@media screen and (max-width:950px) {

    h2 {
        font-size: 1.3rem;
    }

    .form_item label {
        font-size: 0.9rem;
    }

    .err_msg {
        font-size: 0.8rem;
    }

    .link {
        font-size: 0.9rem;
    }
}



@media screen and (max-width:350px) {
    .loginform {
        padding: 10px;
    }
}


/* ///////////////////////////////////////////////////////////////// */
/* css for navbar */



.opennav {
    cursor: pointer;
    z-index: 20;
    flex-direction: column;
    gap: 10px;
    cursor: pointer;
    position: fixed;
    top: 5px;
    left: 10px;
    display: none;
}

a {
    text-decoration: none;
    color: rgb(0, 0, 0);
}

.flex {
    z-index: 10;
    height: 100vh;
    overflow-y: auto;
    display: flex;
    flex-direction: column;
    background-color: rgb(252, 252, 252);
    padding-top: 5px;
    font-size: 1.4rem;
    margin: 0px;
    padding: 10px;
    transition: all 0.5s;
}

.dark .flex {
    background: var(--dark-bg-1000);
}

.flex li {
    list-style: none;
}

.flex li a:hover {
    color: rgb(4, 4, 4);
}


.nav .navbar {
    transition: left 0.5s;
    border-right: gray 1px solid;
}

.overlay {
    display: none;
}

.nav .navbar {
    width: 220px;
}

@media screen and (max-width:700px) {

    .opennav {
        display: block;
    }

    .nav .navbar {
        position: fixed;
        left: -220px;
    }

    .open-nav-bar .overlay {
        display: flex;
        position: absolute;
        width: 100vw;
        height: 100vh;
        background-color: rgba(1, 0, 0, 0.367);
        backdrop-filter: blur(1.5px);
    }

    .open-nav-bar .navbar {
        left: 0px;
    }
}

/* css for section page? */

.section {
    max-width: 700px;
    margin: 25px;
}

.title {
    margin: 0px 0px;
    justify-content: space-between;
    align-items: center;
    display: flex;
    max-width: 600px;
}

.date {
    margin-bottom: 10px;
}

.title h2,
.big_title h2,
.desc,
.big_desc {
    word-break: break-all;
}

.title h2:focus,
.big_title h2,
.big_desc,
.desc:focus {
    outline: 0px;
}

.add_any_section {
    display: flex;
    flex-direction: column;
    padding: 20px;
    justify-content: center;
    align-items: center;
    height: 90vh;
}

.note-option {
    display: flex;
    align-items: center;
    justify-content: space-between;
    max-width: 500px;
}

.owner {
    font-size: 20px;
    font-weight: 300;
    padding-bottom: 4px;
    border-bottom: 10px var(--primary-color) solid;
    width: fit-content;
    margin-bottom: 15px;
}

/* /////////////////////////////////////// */
/* notes*/
.open_note {
    padding: 20px;
    display: flex;
    align-items: center;
}

.notes {
    padding: 20px;
    columns: 3;
    max-width: 1000px;
}

.note {
    background-color: white;
    padding: 20px 20px;
    border-radius: 10px;
    cursor: pointer;
    overflow: hidden;
    transition: all 0.5s;
    margin-bottom: 20px;
}

.dark .note {
    background: var(--dark-bg-600);
    color: white;
}

.note_title {
    margin-bottom: 2px;
}

.note_top {
    display: flex;
    justify-content: space-between;
}
/* ... */

